--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
-.App {
-  text-align: center;
+textarea:focus, input:focus{
+  outline: none;
+}
+nav {
+  width: 100%;
+  position: relative;
+}
+.brand-logo{
+  width: 18%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.brand-logo img{
+  height: 1.6em;
+  width: auto;
+  margin: 22px;
+  margin-left: 80px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-items-container{
+  margin-top: 15px;
   display: flex;
-  flex-direction: column;
+}
+.search-container{
+  width: 260px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  order: 2;
+  border: 1px solid 	#E0E0E0;
+  border-radius: 10px;
+  height:38px;
+  background-color:	#F8F8F8;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  margin-left: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+#search-icon{
+  color:	gray ;
+  padding-left: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#search-bar{
+border: none;
+  padding: 10px;
+  background-color:	#F8F8F8;
+  width: 70%;
+  font-size: .875rem;
+}
+
+.nav-container {
+  display: flex;
+}
+.nav-list{
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  height: 38px;
+  padding: 0;
+  
+}
+.nav-item{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.nav-item:hover{
+  color: black;
+  font-weight: bold;
+
+}
+
+@media (min-width:1280px){
+  .brand-logo img{
+    height: 4em;
   }
-  to {
-    transform: rotate(360deg);
+
+}
+@media(max-width:1280px){
+  .nav-items-container{
+    flex-direction: column ;
+    width: 100%;
+    align-items: center;
   }
+}
+@media (max-width:990px){
+
+  .nav-item{
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+  .brand-logo{
+    width: auto;
+  }
+  .brand-logo img{
+    height: 1.6em;
+    width: auto;
+    margin: 22px;
+    margin-left: 30px;
+  }
+}
+@media (min-width:769px){
+.hamburger-container{
+  display: none;
+}
+}
+@media (max-width:768px){
+.nav-items-container{
+  flex-direction: row-reverse;
+}
+.nav-list{
+  display: none;
+}
+.hamburger-container{
+display: block;
+}
 }
