added mobile navbar items

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@
   margin-top: 8px;
   margin-bottom: 8px;
   white-space: nowrap;
+  list-style-type: none;
 }
 .nav-item:hover{
   font-size: 15px;
@@ -99,4 +100,23 @@
     color: gray;
     font-size: large;
   }
+  .nav-items-mobile{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .nav-items-mobile .nav-item{
+    margin-bottom: 20px;
+    font-size: larger;
+  }
+}
+.nav-items-mobile{
+  display: none;
+}
+.show{
+  display: flex;
+  
+}
+.not-show{
+  display: none;
 }
