--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ body{
   padding: 0;
   
   }
+  input {
+    outline: none;
+  }
 .navbar-desktop{
   display: flex;
   align-items: center;
@@ -76,7 +79,7 @@ body{
   display: none;
 }
 .footer{
-  bottom: 0;
+  
   width: 100%; 
   height: auto;
   background-color:black;
@@ -152,6 +155,131 @@ body{
   margin-right: 20px;
 }
 
+.news-container{
+  background-color: rgb(246,246,246);
+  height: auto  ;
+  padding: 20px;
+}
+.news-title, .vendors-title{
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+}
+.slider {
+  width: 75vw;
+  margin:auto;
+  overflow: hidden;
+}
+.slider img {
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  .slides {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    
+   
+  }
+  .slides::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+
+  .slides::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .slides > div {
+    scroll-snap-align: start;
+    flex-shrink: 0;
+    width: 170px;
+    height: 190px;
+    border-radius: 10px;
+    transform-origin: center center;
+    transform: scale(1);
+    transition: transform 0.5s;
+    position: relative;
+    display: flex;
+  }
+  .image-container{
+    height: 70%;
+  }
+  .slide{
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.11);  
+    margin: 20px 10px 20px 10px;
+    padding-bottom: 10px;
+  }
+  .title-container{
+    margin-left: 10px;
+  }
+  .title {
+  font-size: small;
+  line-height: 0;
+
+  }
+  .subtitle{
+    color: rgba(156,163,175);
+  
+  }
+.vendors-container .slider {
+  width: 65vw;
+  margin-left:auto;
+  overflow: hidden;
+}
+.vendors-container .slides > div {
+  scroll-snap-align: start;
+  flex-shrink: 0;
+  width: 250px;
+  height: 280px;
+  border-radius: 10px;
+  transform-origin: center center;
+  transform: scale(1);
+  transition: transform 0.5s;
+  position: relative;
+  display: flex;
+}
+.vendors-container .title{
+  font-size: large;
+}
+@media (max-width:500px){
+  .news-container .slider{
+    width: 95vw;
+  }
+  .news-container .slides > div{
+    width: 150px;
+    height: 170px;
+  }
+  .vendors-container .slider {
+    width: 80vw;
+    margin-left:auto;
+    overflow: hidden;
+  }
+  .app-image-container img {
+    width: 50px;
+  }
+  .navbar-mobile{
+    flex-direction: column;
+  }
+
+  .search-container{
+    margin-left: 0;
+    width: 300px;
+    margin-bottom: 10px;
+  }
+  .navbar-mobile .nav-logo{
+    align-self: flex-start;
+    margin-bottom: 5px;
+  }
+}
+
 @media (max-width:1200px){
   .nav-logo img {
     width: 50px;
@@ -168,10 +296,15 @@ body{
    flex-direction: column;
  }
  .search-container{
-   width: 400px;
+   width: 300px;
+   margin: auto;
+   margin-bottom: 10px;
  }
 }
 @media (max-width:768px){
+  .vendors-title, .news-title{
+    font-size: 30px;
+  }
   .show{
     display: flex;
     
